# ai-review-assistant

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py  test_script.py
ai_review_assistant/: __init__.py  main.py  review.py
ai_review_assistant/hooks/: pre_commit.py
tests/: test_review.py
