[tool.poetry]
name = "ai-review-assistant"
version = "0.1.0"
description = ""
authors = ["Viktor Andriichuk <v.andriichuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.1"
gitpython = "^3.1.43"
langchain = "^0.2.11"
click = "^8.1.7"

[tool.poetry.scripts]
install-ai-review-hook = "ai_review_assistant.hooks.pre_commit:install_pre_commit_hook"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
